--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,23 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
+      
+      <div class="navbar">
+        <a href="{{site.baseurl}}/">Home</a>
+        <a href="{{site.baseurl}}/about/">About</a>
+        <a href="{{site.baseurl}}/installation">Installation</a>
+        <div class="dropdown">
+          <button class="dropbtn">Documentation 
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="{{site.baseurl}}/user_guide">User Guide</a>
+            <a href="{{site.baseurl}}/dev_guide">Developer Guide</a>
+        </div>
+        </div> 
+        <a href="{{site.baseurl}}/contact">Contact</a>
+      </div>
+      
     </header>
 
     <main id="content" class="main-content" role="main">
