--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,16 +1,12 @@
 ---
 ---
-.page-header {
-    height: 90px;
-    background: #191c20;
-}
 
 @import "{{ site.theme }}";
 
 
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #191C20;
 }
 
 .navbar a {
