--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 
 .page-header {
     background: #FFFFFF;
-    height: #90px;
+    height: 90px;
     padding-top: 0px;
     padding-bottom: 0px;
 }
